# discordbot_init

./: .env.example  .gitignore  Cargo.toml  MakeFile  Readme.md  binify.sh  bot.py  readme.txt  run
.github/workflows/: testing.yaml
rsrc/: bot  bot.txt  requirements.txt
src/: config.rs  main.c  main.rs
tests/: basecode_tests.c  discordinit_tests.c
