[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
load-dotenv = "*"
indicatif = "*"
clap = { version = "*", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }
